# ChangeLog for squashmount

*squashmount-8.7.7
	Martin Väth <martin at mvath.de>:
	- Use gnu_getopt

*squashmount-8.7.6
	Martin Väth <martin at mvath.de>:
	- Support modprobe loop to work around a new udev bug

*squashmount-8.7.5
	Martin Väth <martin at mvath.de>:
	- systemd: set timout to infinity and document how to change it
	- zsh completion: Fix _tags mask test

*squashmount-8.7.4
*squashmount-8.7.3
	Martin Väth <martin at mvath.de>:
	- require Pod::Usage only if necessary; don't use version
	- Replace 'EOF' by 1 to avoid stupid new perl warning

*squashmount-8.7.1
	Martin Väth <martin at mvath.de>:
	- Use perl-5.12 versioning, dotted-decimal version format
	- Require correct minimal versions of perl and its modules

*squashmount-8.7
	Martin Väth <martin at mvath.de>:
	- Provide sample find_cruft.d
	- Cosmetical code cleanup

*squashmount-8.6
	Martin Väth <martin at mvath.de>:
	- Fix IO::Uncompress::Gunzip handling (regression from squashmount-7.6)
	- Treat nonexistent IO::Uncompress::Gunzip like unreadable config

*squashmount-8.5
	Martin Väth <martin at mvath.de>:
	- Be graceful if stored directories are removed: Recreate from scratch
	- take care if -X returns undef

*squashmount-8.4
	Martin Väth <martin at mvath.de>:
	- Create parent directories before calling mksquashfs. This fixes
	  "squashmount create" with standard_mount and nonexistent DIR.mount
	- internal: omit & for function export

*squashmount-8.3
	Martin Väth <martin at mvath.de>:
	- Fix some typos in manpage/examples introduced in 8.2
	- Cosmetical code rearrangements

*squashmount-8.2
	Martin Väth <martin at mvath.de>:
	- use Exporter instead of manual manipulation of symbol glob table
	- more compatible indirect call syntax

*squashmount-8.1
	Martin Väth <martin at mvath.de>:
	- Remove $rundir and $query from advanced configuration, and expose
	  less details than in 8.0 to ensure stability with future versions.
	  Instead:
	- Provide have_stored_data(mountpoint)